[package]
name = "authsrv"
version = "0.1.0"
authors = ["Semyon Ivanov <semyon95@gmail.com>"]

[dependencies]
actix = "0.7.4"
actix-redis = "0.5.1"
actix-web = "0.7.4"
config = "0.9.0"
env_logger = "0.5.13"
futures = "0.1.23"
generic-array = "0.12.0"
rand = "0.5.5"
redis-async = "0.4.1"
reqwest = "0.8.8"
serde = "1.0.75"
serde_derive = "1.0.75"
serde_json = "1.0.26"
sha2 = "0.7.1"
uuid = "0.6.5"
